--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,40 @@
-// Начните писать стили здесь
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/lato/Lato-Regular.woff2") format("woff2");
+  src: url("../fonts/lato/Lato-Regular.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/oswald/oswaldregular.woff2") format("woff2");
+  src: url("../fonts/oswald/oswaldregular.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/oswald/oswaldmedium.woff2") format("woff2");
+  src: url("../fonts/oswald/oswaldmedium.woff") format("woff");
+  font-display: swap;
+}
+
+@import "page__body.less";
+@import "main-header.less";
+@import "promo.less";
+@import "catalog.less";
+@import "job.less";
+@import "example.less";
+@import "stats.less";
+@import "cat.less";
+@import "bottom.less";
+@import "map.less";
+@import "adress.less";
+@import "social.less";
+@import "copiright.less";
