Вносит изменения по замечаним наставника

--- a/source/less/blocks/adress.less
+++ b/source/less/blocks/adress.less
@@ -1,7 +1,5 @@
 .adress__call {
-  font-family: "Oswald", sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  .font-submain;
   font-size: 16px;
   line-height: 20px;
 
@@ -12,6 +10,5 @@
 .adress__text {
   line-height: 20px;
   margin: 0;
-  
-  color: #444444;
+  color: @text-color-submain;
 }
