--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,10 +1,9 @@
 .example {
-  background-color: #EAEAEA;
+  background-color: @bg-color-submain;
 }
 
 .example__title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 36px;
   line-height: 40px;
 
