--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -1,6 +1,5 @@
 .job__title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 36px;
   line-height: 40px;
 
