--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -3,22 +3,20 @@
 }
 
 .promo__title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 36px;
   line-height: 36px;
   margin: 0;
-  color: #FFFFFF;
+  color: @text-bg-color;
 }
 
 .promo__description {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   line-height: 14px;
 
   margin: 0;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: @text-bg-color;
 }
 
 .promo__image {
@@ -26,8 +24,6 @@
 }
 
 .promo__button {
-  font-family: "Oswald", sans-serif;
-
-  color: #FFFFFF;
-  background-color: #68B738;
+  .font-submain;
+  .button-color;
 }
