--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -5,12 +5,11 @@
 .stats__description {
   font-size: 12px;
 
-  color: #444444;
+  color: @text-color-submain;
 }
 
 .stats__number {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 24px;
   line-height: 24px;
 
@@ -19,7 +18,7 @@
 
 .expenses__text,
 .expenses__price {
-  font-family: "Oswald", sans-serif;
+  .font-submain;
   line-height: 20px;
 
   text-transform: uppercase;
