--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,12 +5,11 @@
 }
 
 .catalog__item {
-  background-color: #F2F2F2;
+  background-color: @bg-color-main;
 }
 
 .catalog__title {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 24px;
   line-height: 37px;
 
@@ -22,12 +21,11 @@
 }
 
 .catalog__button {
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
+  .font-submain;
   font-size: 16px;
   line-height: 16px;
 
   text-transform: uppercase;
   text-decoration: none;
-  color: #000000;
+  color: @text-color_main;
 }
