--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -5,13 +5,12 @@
 }
 
 .main-nav__link {
-  font-family: "Oswald", sans-serif;
+  .font-submain;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
 
   text-transform: uppercase;
   text-decoration: none;
-  color: #000000;
+  color: @text-color_main;
 }
-
