Вносит изменения по run lint

--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -14,7 +14,7 @@
   width: 28px;
   height: 22px;
 
-  background-image: url(../img/social/vk.svg);
+  background-image: url("../img/social/vk.svg");
   background-size: 28px 17px;
   background-repeat: no-repeat;
   background-position: center;
@@ -26,7 +26,7 @@
   width: 28px;
   height: 22px;
 
-  background-image: url(../img/social/youtube.svg);
+  background-image: url("../img/social/youtube.svg");
   background-size: 28px 17px;
   background-repeat: no-repeat;
   background-position: center;
@@ -38,7 +38,7 @@
   width: 28px;
   height: 22px;
 
-  background-image: url(../img/social/telegram.svg);
+  background-image: url("../img/social/telegram.svg");
   background-size: 28px 17px;
   background-repeat: no-repeat;
   background-position: center;
