--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -1,10 +1,14 @@
-@button-bg-color: #68B738;
-@button-text-color: #FFFFFF;
+@button-bg-color: #68b738;
+@button-text-color: #ffffff;
 
 @text-color_main: #000000;
 @text-color-submain: #444444;
+@text-bg-color: #ffffff;
 
-@text-bg-color: #FFFFFF;
+@bg-color-main: #f2f2f2;
+@bg-color-submain: #eaeaea;
+@bg-color-arrow: #000000;
 
-@bg-color-main: #F2F2F2;
-@bg-color-submain: #EAEAEA;
+@bg-job-color: #68b738;
+
+@social-line: #d9d9d9;
