--- a/source/less/blocks/bottom.less
+++ b/source/less/blocks/bottom.less
@@ -1,3 +1,26 @@
 .bottom {
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
   background-color: @bg-color-main;
+
+  @media (min-width: @tablet-width) {
+    padding: 55px 30px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 66px 110px;
+  }
+}
+
+.bottom__link {
+  display: contents;
+}
+
+.bottom__svg {
+  height: 26px;
 }
