--- a/source/less/blocks/cat.less
+++ b/source/less/blocks/cat.less
@@ -1,3 +1,9 @@
 .cat__image {
   display: block;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    width: 560px;
+    height: 512px;
+  }
 }
