--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -1,5 +1,5 @@
 .job {
-  padding: 20px 21px 0;
+  padding: 20px 21px 49px;
 
   @media (min-width: @tablet-width) {
     padding: 25px 105px 0 31px;
@@ -23,7 +23,7 @@
 }
 
 .job__list {
-  padding: 20px 0 0 0;
+  padding: 40px 0 0 0;
   margin: 0;
   list-style-type: none;
 
@@ -34,8 +34,9 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 37px;
     justify-content: space-between;
+    gap: 37px;
+    padding: 32px 0 0 0;
   }
 
   @media (min-width: @desktop-width) {
