--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "blocks/job.less";
 @import "blocks/example.less";
 @import "blocks/stats.less";
+@import "blocks/expenses.less";
 @import "blocks/cat.less";
 @import "blocks/bottom.less";
 @import "blocks/map.less";
