--- a/source/less/blocks/cat.less
+++ b/source/less/blocks/cat.less
@@ -1,6 +1,12 @@
+.cat {
+  @media (min-width: @desktop-width) {
+    padding-bottom: 10px;
+    align-self: flex-end;
+  }
+}
+
 .cat__image {
   display: block;
-  align-items: center;
 
   @media (min-width: @tablet-width) {
     width: 560px;
