--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -7,6 +7,30 @@
 
   @media (min-width: @tablet-width) {
     padding: 90px 31px 101px;
+    background-image: linear-gradient(to top, @bg-color-submain 462px, #ffffff 0);
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 69px 110px 75px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.example__wrapper {
+  padding-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 707px;
+    padding-bottom: 91px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 0;
+    width: 436px;
+    padding-bottom: 0;
   }
 }
 
@@ -22,6 +46,28 @@
     font-size: 60px;
     line-height: 60px;
     padding-bottom: 63px;
+    position: relative;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 146px;
+  }
+}
+
+.example__title::before {
+  @media (min-width: @tablet-width) {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 768px;
+    height: 1px;
+    top: -43px;
+    left: -31px;
+    background-color: #e6e6e6;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
   }
 }
 
@@ -35,16 +81,8 @@
     line-height: 24px;
     padding-bottom: 54px;
   }
-}
 
-.example__wrapper {
-  padding-bottom: 20px;
-
-  @media (min-width: @tablet-width) {
-    min-width: 707px;
-    padding-bottom: 91px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  @media (min-width: @desktop-width) {
+    padding-bottom: 69px;
   }
 }
