--- a/source/less/blocks/expenses.less
+++ b/source/less/blocks/expenses.less
@@ -3,8 +3,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    gap: 9px;
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    gap: 63px;
   }
 }
 
