--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,3 +1,12 @@
+.map {
+  height: 362px;
+  background-color: @button-bg-color;
+
+  @media (min-width: @tablet-width) {
+    height: 400px;
+  }
+}
+
 .map-image {
   display: block;
 }
