--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -1,22 +1,9 @@
 .stats__list {
   margin: 0;
   padding-bottom: 20px;
-}
 
-.stats__description {
-  font-size: 12px;
-  color: @text-color-submain;
-}
-
-.stats__number {
-  .font-submain;
-  font-size: 24px;
-  line-height: 24px;
-  margin: 0;
-
-  @media (min-width: @tablet-width) {
-    font-size: 30px;
-    line-height: 37px;
+  @media (min-width: @desktop-width) {
+    padding-bottom: 55px;
   }
 }
 
@@ -28,6 +15,18 @@
   @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
+  }
+}
+
+.stats__number {
+  .font-submain;
+  font-size: 24px;
+  line-height: 24px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
   }
 }
 
