--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,11 +6,13 @@
 @import "blocks/catalog.less";
 @import "blocks/job.less";
 @import "blocks/example.less";
+@import "blocks/profit.less";
 @import "blocks/stats.less";
 @import "blocks/expenses.less";
 @import "blocks/cat.less";
-@import "blocks/bottom.less";
-@import "blocks/map.less";
+@import "blocks/location.less";
 @import "blocks/adress.less";
+@import "blocks/map.less";
+@import "blocks/bottom.less";
 @import "blocks/social.less";
 @import "blocks/copiright.less";
