--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -1,20 +1,55 @@
 .stats__list {
+  display: flex;
+  gap: 32px;
   margin: 0;
-  padding-bottom: 20px;
+  padding-bottom: 34px;
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+  }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 55px;
+    padding-bottom: 60px;
   }
 }
 
 .stats__description {
   font-size: 12px;
   line-height: 12px;
+
   color: @text-color-submain;
+  position: absolute;
+  top: 46px;
+  left: 22px;
+  width: 77px;
+  text-align: center;
+  background-color: @bg-color-submain;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
+    width: 114px;
+    top: 63px;
+    left: 24px;
+    background-color: @text-bg-color;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @bg-color-submain;
+  }
+}
+
+.stats__description:nth-of-type(2) {
+  width: 87px;
+  text-align: center;
+  left: auto;
+  right: 18px;
+
+  @media (min-width: @tablet-width) {
+    width: 142px;
+    left: auto;
+    right: 10px;
   }
 }
 
@@ -22,11 +57,21 @@
   .font-submain;
   font-size: 24px;
   line-height: 24px;
+
+  box-sizing: border-box;
+  width: 124px;
+  height: 56px;
   margin: 0;
+  padding: 14px 0 18px 0;
+  text-align: center;
+  border: 1px solid @stats-border-color;
+  border-radius: 3px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
     line-height: 37px;
+    width: 162px;
+    height: 72px;
   }
 }
 
