--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -12,3 +12,7 @@
 @bg-job-color: #68b738;
 
 @social-line: #d9d9d9;
+@menu-line: #e6e6e6;
+
+@catalog-circle-bg: #68b738;
+@stats-border-color: #cdcdcd;
