--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,5 @@
 @import "blocks/bottom.less";
 @import "blocks/social.less";
 @import "blocks/copiright.less";
+@import "blocks/products.less";
+@import "blocks/specification.less";
