--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -16,3 +16,12 @@
 
 @catalog-circle-bg: #68b738;
 @stats-border-color: #cdcdcd;
+
+@header-line-color: #d9d9d9;
+@products-line-color: #EBEBEB;
+@products-name-color: #222222;
+
+@specification-text-color: #444444;
+
+@products-others-title: #111111;
+@products-others-text: #444444;
