Доделывает секцию каталога

--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -22,6 +22,13 @@
 @products-name-color: #222222;
 
 @specification-text-color: #444444;
+@specification-dl-line-color: #cdcdcd;
+
+@plus-others-color: #d3d3d3;
 
 @products-others-title: #111111;
 @products-others-text: #444444;
+@products-others-border: #f2f2f2;
+
+@button-color-disabled: #444444;
+@button-bg-color-disabled: #f2f2f2;
