--- a/source/less/blocks/specification.less
+++ b/source/less/blocks/specification.less
@@ -3,11 +3,26 @@
   line-height: 16px;
   margin: 0;
   color: @specification-text-color;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+  }
 }
 
 .specification__wrapper {
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    padding: 7px 0 8px 0;
+    border-bottom: 1px solid @specification-dl-line-color;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 7px 0;
+  }
+
 }
 
 .specification__value {
