Добавляет дополнительные товары

--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -32,3 +32,7 @@
 
 @button-color-disabled: #444444;
 @button-bg-color-disabled: #f2f2f2;
+
+@additional-products-line-color: #cdcdcd;
+@additional-products-subtitle-color: #222222;
+@additional-products-text-color: #444444;
