--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,4 @@
 @import "blocks/copiright.less";
 @import "blocks/products.less";
 @import "blocks/specification.less";
+@import "blocks/additional-products.less";
