Добавляет разметку каталога и меню

--- a/source/less/blocks/adress.less
+++ b/source/less/blocks/adress.less
@@ -3,6 +3,8 @@
   display: flex;
   justify-content: space-between;
 
+  background-color: @bg-color-main;
+
   @media (min-width: @tablet-width) {
     padding: 60px 70px 56px;
   }
