--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,3 +19,4 @@
 @import "blocks/products.less";
 @import "blocks/specification.less";
 @import "blocks/additional-products.less";
+@import "blocks/gift.less";
