--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -1,3 +1,5 @@
+@burger-color-line: #000000;
+
 @button-bg-color: #68b738;
 @button-text-color: #ffffff;
 
@@ -36,3 +38,5 @@
 @additional-products-line-color: #cdcdcd;
 @additional-products-subtitle-color: #222222;
 @additional-products-text-color: #444444;
+
+@gift-text-color: #ffffff;
