--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -2,7 +2,14 @@
   padding: 25px 20px 35px;
 
   @media (min-width: @tablet-width) {
-    padding: 0 31px 69px 30px;
+    padding: 0 31px 76px 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 896px 245px;
+    column-gap: 79px;
+    padding: 0 110px 86px;
   }
 }
 
@@ -18,6 +25,11 @@
     line-height: 36px;
     padding: 0 0 80px 37px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 0 81px 0;
+    grid-column: 1/3;
+  }
 }
 
 .additional-products__list {
@@ -30,6 +42,11 @@
     border: 1px solid @additional-products-line-color;
     border-top: none;
   }
+
+  @media (min-width: @desktop-width) {
+    border: none;
+    border-bottom: 1px solid @additional-products-line-color;
+  }
 }
 
 .additional-products__item {
@@ -40,9 +57,14 @@
     padding: 26px 38px 28px;
     border-top: 1px solid @additional-products-line-color;
   }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    padding: 15px 0 16px;
+  }
 }
 
-.additional-products__wrapper {
+.additional-products__item-wrapper {
   display: grid;
   row-gap: 13px;
   margin-bottom: 15px;
@@ -52,6 +74,14 @@
     display: flex;
     justify-content: flex-end;
     margin-bottom: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 271px 189px 51px;
+    column-gap: 54px;
+    align-content: center;
+    margin: 0;
   }
 }
 
@@ -69,6 +99,10 @@
     line-height: 20px;
     max-width: 200px;
     margin-right: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column: auto;
   }
 }
 
@@ -97,6 +131,11 @@
     width: 51px;
     margin-left: 40px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    text-align: start;
+  }
 }
 
 .additional-products__button {
@@ -108,4 +147,11 @@
   border: none;
   min-width: 100%;
   min-height: 40px;
+
+  @media (min-width: @desktop-width) {
+    min-width: 244px;
+    max-width: 244px;
+    height: 40px;
+    margin-left: auto;
+  }
 }
