--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -23,11 +23,42 @@
   height: 18.5px;
   margin: 0;
   padding: 0;
+  border: none;
   background-color: inherit;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     display: none;
   }
+}
+
+.main-nav--closed .main-header__burger::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 24px;
+  height: 1.5px;
+  background-color: @burger-color-line;
+  box-shadow: 0 6.5px 0 0 @burger-color-line, 0 13px 0 0 @burger-color-line;
+}
+
+.main-nav--opened .main-header__burger::before,
+.main-nav--opened .main-header__burger::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+
+  width: 25px;
+  height: 1.5px;
+  background-color: @burger-color-line;
+  transform: rotate(45deg);
+}
+
+.main-nav--opened .main-header__burger::after {
+  transform: rotate(-45deg);
 }
 
 .main-header__list {
@@ -38,7 +69,6 @@
   position: absolute;
   top: 65px;
   left: 0;
-  display: none;
 
   @media (min-width: @tablet-width) {
     width: 440px;
@@ -102,3 +132,37 @@
     text-decoration-color: @button-bg-color;
   }
 }
+
+/*Без JS начало*/
+
+@media (max-width: @tablet-width) {
+  .main-nav--closed .main-header__list {
+    display: none;
+
+    &--opened {
+      display: block;
+    }
+  }
+
+  .main-header--nojs {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    row-gap: 10px;
+    justify-items: center;
+  }
+
+  .main-header--nojs .main-nav--nojs {
+    grid-column: 1/3;
+  }
+
+  .main-nav--nojs .main-header__burger {
+    display: none;
+  }
+
+  .main-nav--nojs .main-header__list {
+    position: static;
+    display: block;
+  }
+}
+
+/*Без JS конец*/
