--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -5,7 +5,7 @@
 
   @media (min-width: @tablet-width) {
     width: 707px;
-    margin: 69px auto 0x;
+    margin: 69px auto 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -39,7 +39,7 @@
   content: "";
   position: absolute;
   top: 59px;
-  left: calc(50% - 1/2*78px);
+  left: calc(50% - 0.5 * 78px);
 
   width: 78px;
   height: 80px;
