--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -32,7 +32,7 @@
   }
 }
 
-.main-nav--closed .main-header__burger::before {
+.main-header__nav--closed .main-header__burger::before {
   content: "";
   position: absolute;
   top: 0;
@@ -44,8 +44,8 @@
   box-shadow: 0 6.5px 0 0 @burger-color-line, 0 13px 0 0 @burger-color-line;
 }
 
-.main-nav--opened .main-header__burger::before,
-.main-nav--opened .main-header__burger::after {
+.main-header__nav--opened .main-header__burger::before,
+.main-header__nav--opened .main-header__burger::after {
   content: "";
   position: absolute;
   top: 8px;
@@ -57,7 +57,7 @@
   transform: rotate(45deg);
 }
 
-.main-nav--opened .main-header__burger::after {
+.main-header__nav--opened .main-header__burger::after {
   transform: rotate(-45deg);
 }
 
@@ -136,7 +136,7 @@
 /*Без JS начало*/
 
 @media (max-width: @tablet-width) {
-  .main-nav--closed .main-header__list {
+  .main-header__nav--closed .main-header__list {
     display: none;
 
     &--opened {
@@ -151,15 +151,15 @@
     justify-items: center;
   }
 
-  .main-header--nojs .main-nav--nojs {
+  .main-header--nojs .main-header__nav--nojs {
     grid-column: 1/3;
   }
 
-  .main-nav--nojs .main-header__burger {
+  .main-header__nav--nojs .main-header__burger {
     display: none;
   }
 
-  .main-nav--nojs .main-header__list {
+  .main-header__nav--nojs .main-header__list {
     position: static;
     display: block;
   }
