--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,3 +20,6 @@
 @import "blocks/specification.less";
 @import "blocks/additional-products.less";
 @import "blocks/gift.less";
+@import "blocks/programm-selection.less";
+@import "blocks/cat-info.less";
+@import "blocks/target.less";
