--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -40,3 +40,11 @@
 @additional-products-text-color: #444444;
 
 @gift-text-color: #ffffff;
+
+@form-text-color: #444444;
+@form-border-color: #e7e7e7;
+@form-border-fielset-color: #d9d9d9;
+@form-text-fieldset-color: #222222;
+@radio-border-color: #cdcdcd;
+@radio-checked-color: #68b738;
+
