--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -62,7 +62,7 @@
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    padding: 1px 37px 4 39px;
+    padding: 1px 37px 4px 39px;
   }
 }
 
