--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,3 +23,4 @@
 @import "blocks/programm-selection.less";
 @import "blocks/cat-info.less";
 @import "blocks/target.less";
+@import "blocks/cat-owner.less";
