--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -47,4 +47,4 @@
 @form-text-fieldset-color: #222222;
 @radio-border-color: #cdcdcd;
 @radio-checked-color: #68b738;
-
+@form-title-line-color: #68b738;
