--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -30,8 +30,7 @@
   flex-grow: 1;
   box-sizing: border-box;
   height: 45px;
-  padding: 8px 20px;
-  padding-top: 6px;
+  padding: 0 20px;
   margin: 0;
   border: 1px solid @form-border-color;
 }
