Еще несколько форм

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,5 @@
 @import "blocks/cat-info.less";
 @import "blocks/target.less";
 @import "blocks/cat-owner.less";
+@import "blocks/commentary.less";
+@import "blocks/additional.less";
