--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -46,5 +46,6 @@
 @form-border-fielset-color: #d9d9d9;
 @form-text-fieldset-color: #222222;
 @radio-border-color: #cdcdcd;
+@checkbox-border-color: #cdcdcd;
 @radio-checked-color: #68b738;
 @form-title-line-color: #68b738;
