--- a/source/less/blocks/commentary.less
+++ b/source/less/blocks/commentary.less
@@ -2,6 +2,10 @@
   padding: 0 20px 22px;
   display: flex;
   flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 67px 65px 70px;
+  }
 }
 
 .commentary__title {
@@ -12,13 +16,20 @@
   margin: 0;
   padding: 0 0 37px 0;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+
+    padding: 0 0 76px 0;
+  }
 }
 
 .commentary__title::after {
   content: "";
   position: absolute;
-  top: 15px;
-  left: 143px;
+  top: 22px;
+  left: 220px;
 
   width: 158px;
   height: 2px;
@@ -37,6 +48,14 @@
   height: 150px;
   padding: 9px 12px 9px 15px;
   border: 1px solid @form-border-color;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+
+    height: 174px;
+    padding: 10px 19px;
+  }
 }
 
 .commentary__text::placeholder {
@@ -45,4 +64,9 @@
   line-height: 18px;
   text-transform: uppercase;
   color: @form-text-color;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
