--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -1,5 +1,9 @@
 .additional {
   padding: 0 20px 34px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 70px 54px;
+  }
 }
 
 .additional__fieldset {
@@ -20,6 +24,13 @@
   margin: 0;
   padding: 0 0 34px 0;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+
+    padding: 0 0 57px 0;
+  }
 }
 
 .additional__title::after {
@@ -31,6 +42,11 @@
   width: 136px;
   height: 2px;
   background-color: @form-title-line-color;
+
+  @media (min-width: @tablet-width) {
+    top: 22px;
+    left: 252px;
+  }
 }
 
 .additional__list {
@@ -41,6 +57,13 @@
   display: flex;
   flex-direction: column;
   gap: 13px;
+
+  @media (min-width: @tablet-width) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      row-gap: 32px;
+      column-gap: 55px;
+  }
 }
 
 .additional__item {
@@ -48,6 +71,11 @@
   display: flex;
   align-items: center;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    min-width: 287px;
+    height: 40px;
+  }
 }
 
 .additional__label {
@@ -57,6 +85,13 @@
   text-transform: uppercase;
 
   padding-left: 46px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+
+    padding-left: 60px;
+  }
 }
 
 /*Checkbox*/
@@ -66,17 +101,25 @@
   top: 0;
   left: 0;
 
+  box-sizing: border-box;
   width: 30px;
   height: 30px;
   border: 1px solid @checkbox-border-color;
+
+  @media (min-width: @tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .additional__input[type="checkbox"]:checked + .control-mark-check::after {
   content: url("../../img/form/check.svg");
   position: absolute;
-  top: 7px;
+  top: 6px;
   left: 6px;
 
-  width: 18px;
-  height: 14px;
+  @media (min-width: @tablet-width) {
+    top: 5px;
+    left: 11px;
+  }
 }
