--- a/source/less/blocks/target.less
+++ b/source/less/blocks/target.less
@@ -4,6 +4,12 @@
   border: none;
   border-top: 1px solid @form-border-fielset-color;
   border-bottom: 1px solid @form-border-fielset-color;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 69px 71px 71px;
+    padding: 25px 28px;
+    border: 1px solid @form-border-fielset-color;
+  }
 }
 
 .target__list {
@@ -29,6 +35,14 @@
 
   display: flex;
   align-items: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+
+    height: 40px;
+    padding-left: 60px;
+  }
 }
 
 .target__input-mark {
@@ -42,18 +56,28 @@
   height: 30px;
   border: 1px solid @radio-border-color;
   border-radius: 50%;
+
+  @media (min-width: @tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .target__input[type="radio"]:checked + .target__input-mark::after {
   content: "";
   position: absolute;
-  top: 7.5px;
-  left: 8px;
+  top: 10px;
+  left: 10.5px;
 
   width: 13px;
   height: 13px;
   border-radius: 50%;
   background-color: @radio-checked-color;
+
+  @media (min-width: @tablet-width) {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 
