--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,6 +21,7 @@
 @import "blocks/additional-products.less";
 @import "blocks/gift.less";
 @import "blocks/programm-selection.less";
+@import "blocks/form.less";
 @import "blocks/cat-info.less";
 @import "blocks/target.less";
 @import "blocks/cat-owner.less";
