--- a/source/less/blocks/cat-owner.less
+++ b/source/less/blocks/cat-owner.less
@@ -4,6 +4,10 @@
   @media (min-width: @tablet-width) {
     padding: 0 66px 65px 69px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px 67px 110px;
+  }
 }
 
 .cat-owner__title {
@@ -20,9 +24,10 @@
     font-size: 36px;
     line-height: 36px;
 
-    width: fit-content;
+    width: 514px;
     padding-bottom: 76px;
   }
+
 }
 
 .cat-owner__title::after {
@@ -49,6 +54,11 @@
   @media (min-width: @tablet-width) {
     gap: 20px;
   }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    gap: 78px;
+  }
 }
 
 .cat-owner__container {
@@ -58,6 +68,10 @@
 
   @media (min-width: @tablet-width) {
     gap: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 569px;
   }
 }
 
