--- a/source/less/blocks/programm-selection.less
+++ b/source/less/blocks/programm-selection.less
@@ -19,6 +19,10 @@
     line-height: 60px;
     padding: 64px 0 54px 69px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 73px 0 56px 110px;
+  }
 }
 
 .programm-selection__text {
@@ -37,5 +41,9 @@
 
     width: 323px;
     padding: 0 0 66px 70px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 0 66px 110px;
   }
 }
