--- a/source/less/blocks/target.less
+++ b/source/less/blocks/target.less
@@ -10,6 +10,11 @@
     padding: 25px 28px;
     border: 1px solid @form-border-fielset-color;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 568px;
+    margin: 0;
+  }
 }
 
 .target__list {
