--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -8,12 +8,20 @@
     padding: 0 67px 72px 71px;
     gap: 20px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+  }
 }
 
 .cat-info__wrapper {
   display: flex;
   gap: 14px;
   align-items: center;
+
+  @media (min-width: @desktop-width) {
+    width: 569px;
+  }
 }
 
 .cat-info__label {
