--- a/source/less/blocks/commentary.less
+++ b/source/less/blocks/commentary.less
@@ -6,6 +6,10 @@
   @media (min-width: @tablet-width) {
     padding: 0 67px 65px 70px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px 67px;
+  }
 }
 
 .commentary__title {
