--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,5 @@
 .form__wrapper {
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     display: flex;
     gap: 80px;
     padding: 0 112px 69px 111px;
