Добавляет адаптивные картинки

--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -76,9 +76,5 @@
 
 .cat-info__input::-webkit-outer-spin-button,
 .cat-info__input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
 }
-
-
-
-
