--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,12 +1,13 @@
 .map {
   height: 362px;
-  background-color: @button-bg-color;
+  background-color: @bg-color-main;
 
   @media (min-width: @tablet-width) {
     height: 400px;
   }
 }
 
-.map-image {
-  display: block;
+.map__frame {
+  width: 100%;
+  height: 100%;
 }
