--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,17 +1,39 @@
 .gift {
   width: 279px;
   margin: 35px auto 0;
-  background-image: url("../../img/catalog/gift-cat.jpg");
+  background-image: url("../../img/catalog/gift-cat-mobile.jpg");
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/catalog/gift-cat-mobile@2x.jpg");
+    background-size: 279px auto;
+  }
 
   @media (min-width: @tablet-width) {
     width: 707px;
     margin: 69px auto 0;
+    background-image: url("../../img/catalog/gift-cat-tablet.jpg");
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/gift-cat-tablet@2x.jpg");
+      background-size: 707px auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
     width: 245px;
     height: 289px;
     margin: 0;
+
+    background-image: url("../../img/catalog/gift-cat-mobile.jpg");
+    background-size: 289px 289px;
+    background-position: right top;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/gift-cat-mobile@2x.jpg");
+      background-size: 289px 289px;
+    }
   }
 }
 
@@ -31,7 +53,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 184px 43px 42px 41px;
+    padding: 184px 43px 45px 41px;
   }
 }
 
