--- a/source/less/utils/colors.less
+++ b/source/less/utils/colors.less
@@ -49,3 +49,5 @@
 @checkbox-border-color: #cdcdcd;
 @radio-checked-color: #68b738;
 @form-title-line-color: #68b738;
+
+@adress-call-text-color: #111111;
