--- a/source/less/blocks/job.less
+++ b/source/less/blocks/job.less
@@ -2,11 +2,13 @@
   padding: 20px 21px 49px;
 
   @media (min-width: @tablet-width) {
-    padding: 25px 105px 0 31px;
+    padding: 25px 105px 47px 31px;
+    border-bottom: 1px solid @menu-line;
   }
 
   @media (min-width: @desktop-width) {
     padding: 71px 106px 0 110px;
+    border: none;
   }
 }
 
