--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -4,13 +4,13 @@
   flex-direction: column;
   align-items: center;
 
-  background-image: url("../../img/index/cat-bg-mobile.jpg");
+  background-image: url("../img/index/cat-bg-mobile.jpg");
   background-size: 320px auto;
   background-repeat: no-repeat;
   background-position: top;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/index/cat-bg-mobile@2x.jpg");
+    background-image: url("../img/index/cat-bg-mobile@2x.jpg");
     background-size: 320px auto;
   }
 
@@ -25,7 +25,7 @@
     padding: 110px 110px 0;
     align-items: flex-start;
 
-    background-image: url("../../img/index/cat-bg-desktop.jpg");
+    background-image: url("../img/index/cat-bg-desktop.jpg");
     background-size: contain;
     background-position: right;
   }
@@ -107,9 +107,16 @@
 .promo__button {
   .font-submain;
   .button-color;
+  box-sizing: border-box;
   width: 100%;
   height: 40px;
   border: none;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
